--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,8 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.yml
     - name: Test with pytest
       run: |
         pytest -vs --doctest-modules --cov-branch --cov=how_to_opensource --pyargs how_to_opensource
