--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
     - defaults
     - conda-forge
 dependencies:
+    - bump2version=1.0.1
     - flake8=3.9.0
     - numpydoc=1.1.0
     - pytest=6.2.2
