--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,13 +4,13 @@ commit = True
 tag = True
 
 [bumpversion:file:setup.py]
-search = VERSION = "{current_version}"
-replace = VERSION = "{new_version}"
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:how_to_opensource/_version.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [bumpversion:file:doc/conf.py]
-search = version = "{current_version}"
-replace = version = "{new_version}"
+search = release = "{current_version}"
+replace = release = "{new_version}"
