--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,7 +20,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file environment.yml --name base
+        conda env update --file environment.dev.yml --name base
     - name: Test with pytest
       run: |
         pytest -vs --doctest-modules --cov-branch --cov=how_to_opensource --pyargs how_to_opensource
