--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,9 @@ jobs:
   build-linux:
     runs-on: ${{ matrix.os }}
     strategy:
-      os: [ubuntu-latest, windows-latest]
-      python-version: [3.8, 3.9]
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        python-version: [3.8, 3.9]
     defaults:
       run:
         shell: bash -l {0}
