--- a/environment.dev.yml
+++ b/environment.dev.yml
@@ -16,3 +16,5 @@ dependencies:
     - sphinx_rtd_theme=0.5.2
     - sphinx-autodoc-typehints=1.12.0
     - sphinx_rtd_theme=0.5.2
+    - twine=3.4.1
+    - wheel=0.36.2
