--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,5 +12,5 @@ search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [bumpversion:file:doc/conf.py]
-search = release = "{current_version}"
-replace = release = "{new_version}"
+search = release = '{current_version}'
+replace = release = '{new_version}'
